# bonsai

./: .gitignore  Cargo.toml  README.md  flake.nix
bonsai-chess/: Cargo.toml  README.md
bonsai-chess/src/: castling_rights.rs  coordinates.rs  grid.rs  kind.rs  lib.rs  located_piece.rs  main.rs  outcome.rs  piece.rs  ply.rs  special_move.rs  square.rs  team.rs
bonsai-chess/src/atoms/: castling_rights.rs  coordinate.rs  coordinates.rs  mod.rs  move_counter.rs  side.rs  square.rs  team.rs
bonsai-chess/src/board/: board.rs  board_backend.rs  board_frontend.rs  fen.rs  grid.rs  mod.rs  snapshot.rs  square.rs
bonsai-chess/src/board/board_backend/: grid.rs  mod.rs
bonsai-chess/src/board/board_frontend/: mod.rs
bonsai-chess/src/board/positions/: mod.rs
bonsai-chess/src/move_generator/: bishop.rs  directions.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs  sliding.rs
bonsai-chess/src/moves/: mod.rs  ply.rs  special_move.rs
bonsai-chess/src/moves/generator/: bishop.rs  directions.rs  king.rs  knight.rs  legality_context.rs  mod.rs  pawn.rs  queen.rs  rook.rs  sliding.rs
bonsai-chess/src/pieces/: kind.rs  located_piece.rs  mod.rs  piece.rs
bonsai-chess/src/rules/: mod.rs  outcome.rs
bonsai-chess/src/state/: board.rs  fen.rs  game.rs  grid.rs  mod.rs  snapshot.rs  square.rs
bonsai-chess/src/state/positions/: mod.rs
bonsai-cli/: Cargo.toml  README.md
bonsai-cli/src/: main.rs
bonsai-engine/: Cargo.toml  README.md
bonsai-engine/src/: alpha_beta_prunning.rs  evaluation.rs  lib.rs  main.rs  openings.rs  transposition_table.rs
bonsai-engine/src/config/: mod.rs
bonsai-engine/src/evaluation/: mod.rs  piece_square_tables.rs  score_move.rs  score_position.rs
bonsai-engine/src/search/: alpha_beta.rs  alpha_beta_prunning.rs  mod.rs  quiescence.rs
bonsai-gui/: Cargo.toml  README.md  Trunk.toml  index.html
bonsai-gui/src/: app.rs  feedback.rs  lib.rs  main.rs
bonsai-gui/src/components/: board.rs  controls.rs  game_over.rs  history.rs  mod.rs  piece.rs  sidebar.rs  square.rs
bonsai-gui/src/components/game_area/: board.rs  mod.rs  piece.rs  square.rs
bonsai-gui/src/components/layout/: controls.rs  game_over.rs  history.rs  mod.rs  sidebar.rs  source_code.rs  undo.rs
bonsai-gui/src/components/modals/: game_over.rs  mod.rs  promotion.rs
bonsai-gui/src/engine/: engine_hook.rs  engine_role.rs  mod.rs
bonsai-gui/src/state/: game_state.rs
bonsai-gui/src/utils/: export_to_pgn.rs  feedback.rs  mod.rs
static/pieces/california/: License.txt
