[package]
name = "bonsai-chess"
version = "0.1.0"
authors = ["niblit <hi@niblit.dev>"]
edition = "2024"
rust-version = "1.91.1"
description = "crate that keeps track of the entire chess game"
readme = "./README.md"
repository = "https://github.com/niblit/bonsai"
license = "GPL-3.0-or-later"

[dependencies]


[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
dead_code = "allow"