[package]
name = "bonsai-gui"
version = "0.1.0"
authors = ["niblit <hi@niblit.dev>"]
edition = "2024"
rust-version = "1.96.0"
description = "A graphical chess interface for bonsai."
readme = "./README.md"
repository = "https://github.com/niblit/bonsai"
license = "GPL-3.0-or-later"
keywords = ["chess", "game", "chess-engine"]
categories = ["algorithms", "data-structures", "games", "simulation"]

[dependencies]
bonsai-chess = { path = "../bonsai-chess" }
bonsai-engine = { path = "../bonsai-engine" }

leptos = { version = "0.8.19", features = ["csr"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.122"
web-sys = { version = "0.3.99", features = ["HtmlAudioElement", "Window", "Navigator", "Blob", "BlobPropertyBag", "Url", "Document", "HtmlElement"] }
js-sys = "0.3.99"

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
